Refactor to use var instead of specific reference types