@@ -1,21 +1,21 @@
 package com.maneesh.meta;
 
 import com.dampcake.bencode.Bencode;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+
 import java.nio.ByteBuffer;
 import java.nio.charset.StandardCharsets;
 import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 
 public class Info {
 
   private static final Logger log = LoggerFactory.getLogger(Info.class);
 
-  private final static Bencode bencode = new Bencode(true);
+  private static final Bencode bencode = new Bencode(true);
 
   private final Long pieceLength;
 
@@ -32,7 +32,7 @@ public class Info {
   private int totalPieces;
 
   public Info(Map<String, Object> infoMap) {
-    log.info("Info Map: " + infoMap);
+    log.info("Info Map: {}", infoMap);
     this.infoHash = calculateInfoHash(infoMap);
     this.pieceLength = (Long) infoMap.get("piece length");
     this.isPrivate = Long.valueOf(infoMap.getOrDefault("private", 0) + "");
@@ -43,42 +43,42 @@ public class Info {
       long totalSizeInBytes = 0;
       if (infoMap.containsKey("files")) {
         // multi file mode
-        List<Map<String, Object>> files = (List<Map<String, Object>>) infoMap.get("files");
-        String rootDirectoryName = new String(((ByteBuffer) infoMap.get("name")).array(),
+        var files = (List<Map<String, Object>>) infoMap.get("files");
+        var rootDirectoryName = new String(((ByteBuffer) infoMap.get("name")).array(),
             StandardCharsets.UTF_8);
-        DownloadFile[] downloadFiles = new DownloadFile[files.size()];
+        var downloadFiles = new DownloadFile[files.size()];
 
-        int pieceStartIndex = 0;
-        int i = 0;
+        var pieceStartIndex = 0;
+        var i = 0;
         // check if access of file in files is ordered because that will impact piece start index
         for (Map<String, Object> file : files) {
-          List<String> path = ((List<ByteBuffer>) file.get("path")).stream()
+          var path = ((List<ByteBuffer>) file.get("path")).stream()
               .map(pathByteBuffer -> new String(pathByteBuffer.array()))
-              .collect(Collectors.toList());
-          long length = (long) file.get("length");
+              .toList();
+          var length = (long) file.get("length");
           totalSizeInBytes += length;
-          long numberOfPieces = length / pieceLength;
+          var numberOfPieces = length / pieceLength;
           numberOfPieces = length % pieceLength == 0 ? numberOfPieces : (numberOfPieces + 1);
-          totalPieces += numberOfPieces;
+          totalPieces += (int) numberOfPieces;
           downloadFiles[i++] = new DownloadFile(
-              path.get(path.size() - 1),
+              path.getLast(),
               path, length, pieceStartIndex,
               numberOfPieces,
               (String) file.getOrDefault("md5Sum", "")
           );
-          pieceStartIndex += numberOfPieces;
+          pieceStartIndex += (int) numberOfPieces;
         }
         content = new Content(rootDirectoryName, downloadFiles);
       } else {
         // single file mode
-        DownloadFile[] downloadFiles = new DownloadFile[1];
-        String name = new String(((ByteBuffer) infoMap.get("name")).array(),
+        var downloadFiles = new DownloadFile[1];
+        var name = new String(((ByteBuffer) infoMap.get("name")).array(),
             StandardCharsets.UTF_8);
-        String md5Sum = (String) infoMap.get("md5Sum");
-        long length = (long) infoMap.get("length");
-        long numberOfPieces = length / pieceLength;
+        var md5Sum = (String) infoMap.get("md5Sum");
+        var length = (long) infoMap.get("length");
+        var numberOfPieces = length / pieceLength;
         numberOfPieces = length % pieceLength == 0 ? numberOfPieces : (numberOfPieces + 1);
-        totalPieces += numberOfPieces;
+        totalPieces += (int) numberOfPieces;
         totalSizeInBytes += length;
         downloadFiles[0] = new DownloadFile(name, null, length, 0, numberOfPieces, md5Sum);
         content = new Content(null, downloadFiles);
@@ -90,7 +90,7 @@ public class Info {
 
   private static byte[] calculateInfoHash(Map<String, Object> info) {
     try {
-      MessageDigest md = MessageDigest.getInstance("SHA-1");
+      var md = MessageDigest.getInstance("SHA-1");
       return md.digest(bencode.encode(info));
     } catch (NoSuchAlgorithmException e) {
       throw new RuntimeException(e);
